z-index fixed

--- a/src/styles/contact.sass
+++ b/src/styles/contact.sass
@@ -2,7 +2,7 @@
 .contact
   // font-family: 'Nunito Sans', sans-serif
   position: relative
-  z-index: 1
+  // z-index: 2
   padding: 4rem 0 5rem
   color: #6094a7
   // text-align: center
@@ -23,6 +23,7 @@
   background: rgba(3, 10, 21, 0.86)
 
 .contact-form
+  z-index: 2
   position: relative
   display: flex
   flex-wrap: wrap
@@ -91,7 +92,7 @@ label:first-of-type
   left: 50%
   width: 80%
   transform: translateX(-50%)
-  height: 20%
+  height: 10%
   -webkit-clip-path: url('#thumb-titles-clip')
   clip-path: url('#thumb-titles-clip')
   background: rgb(72, 130, 172)
@@ -102,7 +103,7 @@ label:first-of-type
   z-index: -1
   width: 80%
   transform: translateX(12.5%)
-  height: 42%
+  height: 26%
   -webkit-clip-path: url('#tools-clip')
   clip-path: url('#tools-clip')
   background: rgb(72, 130, 172)
@@ -130,7 +131,7 @@ label:first-of-type
   width: 100vw
   height: 100vh
   transition: all 1.5s ease .5s
-  z-index: 2
+  z-index: 3
 
 .popup-bg
   position: absolute
