--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,800;0,900;0,1000;1,200;1,300;1,400;1,600;1,800;1,900;1,1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:wght@100;200;400;600;800&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap')
 @import './just-grid.css'
-
-//Phudu, Poppins, Raleway, Rubik Mono One, Sonsie One, Calligraffitti, Coda, Homemade Apple, Kanit, Niconne
-  
+ 
 @tailwind base
 @tailwind components
 @tailwind utilities
@@ -10,11 +8,6 @@
 $nunito: 'Nunito Sans'
 $main-font: 'Work Sans'
 $work: 'Work Sans'
-
-// $main-font: 'El Messiri'
-// $main-font: 'Numans'
-// $main-font: 'Prosto One'
-
 
 $b: #101018
 $fore: #1c1c29
@@ -28,18 +21,11 @@ $bg: #101018db
 
 $on-dark-shadow: -6px 4px 4px $shadow
 
-
-//project list cards
 @import "cards.sass"
 @import "trick-cards.sass"
 @import "contact.sass"
 @import "tools.sass"
 @import "intro.sass"
-
-// @media (min-width: 768px) 
-// @media (min-width: 992px)
-// @media (min-width: 1200px) 
-// @media (min-width: 1400px)
 
 html, body
   scroll-behavior: smooth
@@ -65,8 +51,6 @@ canvas
   height: 100%
   position: relative
   background: $b
-  // z-index: 1
-  // overflow: hidden
 
   // z-index stacking context is relevant to an element's nearest parent with a z-index (always infront) - otherwise it's on the global z-index (can be behind)
   //https://web.dev/learn/css/z-index/ 
@@ -495,19 +479,6 @@ $title-color: #44A595
   .titles-wrapper
     top: 22vh
 
-    // top: 8.5rem
-
-
-// @media (min-width: 992px) 
-//   .logo-wrapper
-//     transform: translateX(-50%) scale(1.4)
-
-
-// @media (min-width: 1400px) 
-//   .logo-wrapper
-//     transform: translateX(-50%) scale(1.6)
-
-
 @keyframes sparkles-1
   0%
     opacity: 1
@@ -684,96 +655,6 @@ $title-color: #44A595
   left: 0
 
 
-
-
-
-
-
-
-
-// //old? move this////////////////////
-// //project page
-// .project-container
-//   position: relative
-//   width: 100%
-//   padding-top: 3rem
-//   // background: $fore
-//   color: white
-//   font-family: Raleway
-//   justify-content: center
-
-// .project
-//   margin-bottom: 50px
-//   height: 100vh
-//   text-align: center
-
-// .project-header
-//   font-size: 2.4rem
-//   margin: 2.2rem 0
-//   padding: 1.2rem
-
-// .project-icons
-//   margin-bottom: 3.2rem
-//   // margin: 1.2rem 0
-
-// .project-item-desc
-//   margin: 2rem auto
-
-
-// @media (min-width: 800px) 
-//   .layout-img2
-//     width: 800px
-
-  
-// .layout-img
-//   box-shadow: -2px 6px 6px $shadow
-//   border-radius: 3px
-//   position: relative
-//   top: 0
-//   left: 0
-
-// $overlay-back: #8d49fbe5
-// $overlay-fore: #ffe48c
-// // $overlay-fore: white
-
-
-// .layout-img-layover
-//   opacity: 0
-//   position: absolute
-//   width: 100%
-//   height: 100%
-//   background: white
-//   // background: linear-gradient(110deg, #865fc4ea 0%, #3d3795e8 50%)
-//   background: radial-gradient(circle, #FFF 35%, #FFF00 100%)
-//   // background: radial-gradient(circle,#4e3b7a 0%, #5432bba7 100%)
-
-// $fore-more: #383155
-
-// .overlay-link
-//   font-size: 1.6rem
-//   font-weight: 800
-//   border-top: 5px solid $fore-more
-//   border-bottom: 5px solid $fore-more
-//   color: $fore-more
-//   padding: 1.2rem 2rem 1.4rem
-//   position: relative
-//   top: 50%
-//   transform: translateY(-50%)
-//   display: inline-block
-//   transition: background .3s ease
-//   //note: transform is ignored on inline elements!! pffwhat!
-//   &:hover
-//     background: $fore-more
-//     color: white
-//     font-weight: 800
-
-// @media (min-width: 1200px) 
-//   .overlay-link
-//     font-size: 2.4rem
-//     padding: 2.2rem 4rem 2.4rem
-
-
-
 #svg-proj-back
   fill:#ffffff00
   position: fixed 
@@ -797,6 +678,7 @@ $title-color: #44A595
   transition: transform 1.8s ease-out
   height: 100vh
   top: 0
+  display: none
 
 .stars-left, .stars-right
   position: absolute
@@ -805,17 +687,15 @@ $title-color: #44A595
   height: 60vh
   opacity: .15
   transition: left .8s ease-in-out, right .8s ease-in-out
-  // transform: scale(.7)
 
 .stars-left
   left: 2%
 .stars-right
   right: 2%
-  // bottom: 150px
 
 @media (min-width: 768px) 
-
-
+  .stars-container
+    display: block
 
 @media (min-width: 992px)
   .stars-left, .stars-right
@@ -825,8 +705,6 @@ $title-color: #44A595
   .stars-right
     right: 5%
 
-
-
 @media (min-width: 1200px) 
   .stars-left, .stars-right
 
@@ -835,7 +713,6 @@ $title-color: #44A595
     left: 7%
   .stars-right
     right: 8%
-
 
 footer
   position: relative
