--- a/src/styles/intro.sass
+++ b/src/styles/intro.sass
@@ -25,57 +25,33 @@
   .intro-paras
     margin: auto
 
-// @media (min-width: 768px) 
-//   .introduction
 
 #intro-clip
   position: absolute
-  // top: 0
 
 .highlight
   font-weight: 600
   font-size: 1.2rem
   color: #44a595
 
-
 .logo-intro
-  // width: 25%
   height: 120px
   margin: 1rem auto 2.5rem
-  // margin: 0 0 4rem 2rem
   fill: #5cabc9
   fill: #44a5a3
   fill: rgb(4, 20, 35)
   stroke: rgb(38, 63, 86)
   stroke-width: .8
-  // padding-bottom: 2rem
-
-
-@media (min-width: 768px) 
-  .logo-intro
-    margin: 1rem auto 4rem
-
-    // width: 16%
-    // height: 120px
-
-@media (min-width: 992px) 
-  .logo-intro
-    // margin: 0rem auto 2.5rem
-    // width: 10%
-
 
 .call-to-action
   position: relative
   margin: auto
 
 .intro-actions-text
-  // position: relative
-  // display: inline
+
 
 .intro-message, .intro-email, .intro-git, .intro-li
-  // margin: 0 .6rem 0 0
   position: relative
-  // font-weight: 500
   top: 0
   transition: all .3s ease
   &:hover
@@ -87,11 +63,6 @@
     display: inline-block
     fill: #44a595
     margin: 0 .6rem 0 .3rem
-    // &:hover
-    //   fill: white
-
-
-    // transform: translateY(-8px)
 
 .intro-message svg
   width: 28px
@@ -109,11 +80,8 @@
   width: 27px
   transform: translateY(-4px)
 
-
 .keep-scrolling
-  // padding-top: 4rem
   position: relative
-  // text-align: right
 
 .go-down-intro
   width: 50px
@@ -131,13 +99,12 @@
 
 @media (min-width: 768px) 
   .introduction 
-    // scale: .9
     border-radius: 0px 
     width: 80% 
     font-size: 1.2rem 
-    // padding: 2.8rem 
-    // padding-bottom: rem 
     padding-top: 6rem 
+  .logo-intro
+    margin: 1rem auto 4rem
   .intro-paras
     width: 90%
   .call-to-action
@@ -145,24 +112,14 @@
   .highlight
     font-size: 1.4rem
   .go-down-intro
-    // right: 160px
     bottom: 100px
-
 
 @media (min-width: 992px) 
   .call-to-action
     flex-wrap: nowrap
-  .introduction
-    // padding-bottom: 0
-    // padding-top: 6rem
-
   .go-down-intro
-    // right: 160px
     bottom: 120px
 
 @media (min-width: 1200px) 
   .introduction
-    // padding: 3.5rem
-    // padding-top: 6rem
-    // padding-bottom: 6rem
-    // font-size: 1.6rem
+    
